--- a/index.html
+++ b/index.html
@@ -15,14 +15,27 @@
   </head>
   <body>
     <h1 class="text-center fw-bolder">Search your Player</h1>
-    <div class="container px-4">
-      <div class="row g-3 ">
-        <div class="col text-center border rounded-3 border-dark">
-          <div>Column</div>
+    <div class="container w-100 m-auto">
+      <div class="row w-100 m-auto">
+        <div class="col-md-6 m-auto text-center">
+            <h1>left side</h1>
+          <div class="input-group mb-3">
+            <input
+            id="search-box"
+              type="text"
+              class="form-control"
+              placeholder="Search"
+              aria-label="Search"
+              aria-describedby="basic-addon2"
+            />
+            <div class="input-group-append">
+              <span class="input-group-text" id="search-btn">Search</span>
+            </div>
+          </div>
         </div>
 
-        <div class="col text-center border rounded-3 border-dark">
-          <div>Column</div>
+        <div class="col-md-6 m-auto text-center">
+          <h1>right side</h1>
         </div>
       </div>
     </div>
